2003-08-08  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Modified the way that ControllerState objects store the context.  For 
     reasons I don't completely understand, the old way I was storing them
     trashed the stored object's acquisition context (even when they were
     properly unwrapped via aq_inner).  The fix is kind of evil: I store the
     context in a list, so the acquisition context is unchanged by the 
     container.  This will wreak havoc if we ever try to persist ControllerState
     objects, but this shouldn't have to happen, since we just pass around the 
     state objects in the REQUEST.

   * Added a default.html file that has some useful default content for 
     ControlledPageTemplates that are created in the ZMI.
    
2003-08-06  Kevin Teague <kevin@bud.ca> (Wheat)

   * Minor corrections and edits to the documentation within the ZMI Validation
     and Actions tabs. Added an example of setting portal_status_message from a 
     script using state.setKwargs() in the docs.

2003-08-01  Kevin Teague <kevin@bud.ca> (Wheat)

   * Updated the documentation to reflect the new .metadata file method.

2003-07-30  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Things now work if the validators section of the .metadata file is empty.
     Also fixed problem with ControlledPageTemplateFile not getting the right
     path to the .metadata file.

2003-07-30  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Added instructions for making CMFFormController work with CMF 1.3 to the
     README file.

2003-07-30  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * .metadata files didn't load properly if they didn't contain both an actions
     section and a validators section.  Fixed.

2003-07-30 Kevin Teague <kevin@bud.ca> (Wheat)

   * Prettied up the ZMI tables for Default Actions and Default Validators

2003-07-27  Geoff Davis <geoff@geoffdavis.net> (plonista)
